# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
examples/: bad.yaml  good.yaml
hooks/: check_csharp_xml_comments.py  fix_yaml_comment_spacing.py  fix_yaml_document_start.py
pre_commit_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_check_csharp_xml_comments.py  test_fix_yaml_comment_spacing.py  test_fix_yaml_document_start.py
