[metadata]
name = pre-commit-hooks
version = 0.1.0
description = Pre-commit hooks for fixing common yamllint issues
long_description = file: README.md
long_description_content_type = text/markdown
author = halemiles
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    fix-yaml-document-start = hooks.fix_yaml_document_start:main
    fix-yaml-comment-spacing = hooks.fix_yaml_comment_spacing:main
